--- a/index.html
+++ b/index.html
@@ -117,70 +117,70 @@
     const DEFAULT_PUZZLES = [
   {
     "src": "assets/photos/01-pb6.jpg",
-    "caption": "Ferry Building photobooth strip",
+    "caption": "IWLYF",
     "rows": 4,
     "cols": 4,
     "rotate": false
   },
   {
     "src": "assets/photos/02-pb5ani.jpg",
-    "caption": "Cartoon photobooth",
+    "caption": "I GOT YOU ALWAYS",
     "rows": 4,
     "cols": 4,
     "rotate": false
   },
   {
     "src": "assets/photos/03-felt1.jpg",
-    "caption": "Felt portrait with butterflies",
+    "caption": "YOU'RE MY BUTTERFLY",
     "rows": 4,
     "cols": 4,
     "rotate": false
   },
   {
     "src": "assets/photos/04-pb4.jpg",
-    "caption": "Photobooth \u2014 red curtain collage",
+    "caption": "SO IN LOVE WITH YOU",
     "rows": 4,
     "cols": 4,
     "rotate": false
   },
   {
     "src": "assets/photos/05-pb3.jpg",
-    "caption": "Photobooth \u2014 black & white collage",
+    "caption": "LOVE ME BABY",
     "rows": 4,
     "cols": 4,
     "rotate": false
   },
   {
     "src": "assets/photos/06-sb1.jpg",
-    "caption": "Cozy elevator selfie",
+    "caption": "GOD ONLY KNOWS",
     "rows": 4,
     "cols": 4,
     "rotate": false
   },
   {
     "src": "assets/photos/07-nb1.jpg",
-    "caption": "Mirror selfie",
+    "caption": "ALWAYS FOREVER",
     "rows": 4,
     "cols": 4,
     "rotate": false
   },
   {
     "src": "assets/photos/08-sf1.jpg",
-    "caption": "Windy day by the bay",
+    "caption": "PERFECT ANGELS",
     "rows": 4,
     "cols": 4,
     "rotate": false
   },
   {
     "src": "assets/photos/09-pb2.jpg",
-    "caption": "Photobooth \u2014 set 2",
+    "caption": "WE'RE #1",
     "rows": 4,
     "cols": 4,
     "rotate": false
   },
   {
     "src": "assets/photos/10-pb1.jpg",
-    "caption": "Photobooth \u2014 set 1",
+    "caption": "GOOD TO MY BABY",
     "rows": 4,
     "cols": 4,
     "rotate": false
