--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
   <!-- Win ribbon -->
   <div class="ribbon" id="win">
     <div class="inner">
-      <h3>Picture perfect! 💘</h3>
-      <p>You're my favorite adventure.</p>
+      <h3>Picture perfect (LIKE YOU)! 💘</h3>
+      <p>I WILL LOVE YOU FOREVER!!!</p>
       <button id="btnCloseWin">Aww 🥹</button>
     </div>
   </div>
