--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#ffd9e6" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>Our California Jigsaw</title>
+  <title>THE #1 Jigsaw in ALL THE WORLD</title>
 
   <!-- Cute, beachy fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,7 +65,7 @@
         <div class="logo" id="logo">♥</div>
         <div>
           <h1>Our California Jigsaw</h1>
-          <p class="subtitle" style="margin:.25rem 0 0;opacity:.8;font-size:13px">Beach Boys energy, pastel sunset, and all our little memories 🌴</p>
+          <p class="subtitle" style="margin:.25rem 0 0;opacity:.8;font-size:13px">CALIFORNIA IS FOR LOVERS 🌴</p>
         </div>
       </div>
       <div class="controls">
